src/objects/Publishing_Contract__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Book__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Book</label>
        <referenceTo>Book__c</referenceTo>
        <relationshipLabel>Publishing Contracts</relationshipLabel>
        <relationshipName>Publishing_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Publisher__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Publisher</label>
        <referenceTo>Publisher__c</referenceTo>
        <relationshipLabel>Publishing Contracts</relationshipLabel>
        <relationshipName>Publishing_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Publishing Contract</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{0000000}</displayFormat>
        <label>Contract Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Publishing Contracts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>